<resources>
    <string name="app_name">EuroNBA</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <!-- Strings used for fragments for navigation -->

    <string name="gameStartTime">Start time: %1$s</string>
    <string name="gameArena" translatable="false">%1$s - %2$s</string>
    <string name="gameDuration">Game duration:  %1$s</string>
    <string name="gameNotStart">Yet to start.</string>
    <string name="mainDate" translatable="false">%1$s - %2$s - %3$s</string>
    <string name="playerJerseyPos" translatable="false">#%1$s - %2$s</string>
    <string name="playerBirthAge">%1$s - Age: %2$s</string>
    <string name="playerCollege">Procedence:  %1$s</string>
    <string name="playerHeight">Height:  %1$s m</string>
    <string name="playerWeight">Weight:  %1$s kg</string>
    <string name="playerYearsPro">Years Pro:  %1$s</string>
    <string name="removedFavorites">Removed from favorites</string>
    <string name="addedFavorites">Added to favorites</string>

    <!-- PlayOffs -->
    <string name="firstRound">First Round</string>
    <string name="secondRound">Second Round</string>
    <string name="confFinal">Conference Finals</string>
    <string name="finals">The Finals</string>

    <!-- Standings -->
    <string name="east">EAST</string>
    <string name="west">WEST</string>

    <!-- Team -->
    <string name="teamConf" translatable="false">Conf:  %1$s</string>
    <string name="teamDiv" translatable="false">Div:  %1$s</string>

    <!-- TeamList -->
    <string name="teamListJerseyPos" translatable="false">%1$s #%2$s</string>

    <!-- TeamStats -->
    <string name="total" translatable="false">TOT</string>

    <!-- Cabeceras -->
    <string name="team">TEAM</string>
    <string name="wins">W</string>
    <string name="losses">L</string>
    <string name="pct">%W</string>
    <string name="streak">STR</string>
    <string name="lastTen">L10</string>

    <string name="player">PLAYER</string>
    <string name="min" translatable="false">MIN</string>
    <string name="pts" translatable="false">PTS</string>
    <string name="ast" translatable="false">AST</string>
    <string name="reb" translatable="false">REB</string>
    <string name="blk">BLK</string>
    <string name="stl">STL</string>
    <string name="fgm">FGM</string>
    <string name="fga">FGA</string>
    <string name="fgp">FG%</string>
    <string name="tpm" translatable="false">3PM</string>
    <string name="tpa" translatable="false">3PA</string>
    <string name="tpp" translatable="false">3P%</string>
    <string name="ftm">FTM</string>
    <string name="fta">FTA</string>
    <string name="ftp">FT%</string>
    <string name="orb">ORB</string>
    <string name="drb">DRB</string>
    <string name="to">TO</string>
    <string name="pf">PF</string>
    <string name="plusMinus" translatable="false">+/-</string>

    <string name="year">YEAR</string>
    <string name="gp">GP</string>

    <string name="pos" translatable="false">POS</string>
    <string name="pro" translatable="false">PRO</string>
    <string name="procedence">PROCEDENCE</string>

    <!-- Menu -->

    <string name="home" >Home</string>
    <string name="standings" >Standings</string>
    <string name="teams" >Teams</string>
    <string name="players" >Players</string>
    <string name="PlayOffs">PlayOffs Bracket</string>
    <string name="favorites" >Favorites</string>

    <!-- Error -->

    <string name="errorPlayoffs" >No teams on this round yet!</string>
    <string name="errorFavorites">No favorites yet!</string>
    <string name="errorMain">No games on this date...</string>
</resources>