<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableRowPlayer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPlayerStatsSeasonYear"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/year"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsTeam"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/team"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsGp"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/gp"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsMpg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/min"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsPpg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/pts"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsRpg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/reb"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsApg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/ast"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsBpg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/blk"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsFgp"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/fgp"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsFtp"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/ftp"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsTpp"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/tpp"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsTopg"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/to"
        android:theme="@style/Theme.EuroNBA.TableCol" />

    <TextView
        android:id="@+id/tvPlayerStatsPlusMinus"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:text="@string/plusMinus"
        android:theme="@style/Theme.EuroNBA.TableCol" />
</LinearLayout>