<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">

    <include layout="@layout/menu_header_layout" />

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_players"
        android:title="@string/players"
        android:icon="@drawable/player_icon"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/menu_teams"
        android:icon="@drawable/team_icon"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/menu_standings"
        android:icon="@drawable/standings_icon"
        android:title="@string/standings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_playoffs"
        android:icon="@drawable/playoffs_icon"
        android:title="@string/PlayOffs"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/fav_icon"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"/>

</menu>